// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`WuiListGroup is rendered 1`] = `
<ul
  aria-label="aria-label"
  class="wuiListGroup wuiListGroup--gutterSmall wuiListGroup-maxWidthDefault testClass1 testClass2"
  data-test-subj="test subject string"
/>
`;

exports[`WuiListGroup listItems is rendered 1`] = `
<ul
  class="wuiListGroup wuiListGroup--gutterSmall wuiListGroup-maxWidthDefault"
>
  <li
    class="wuiListGroupItem wuiListGroupItem--medium"
  >
    <span
      class="wuiListGroupItem__text"
    >
      <div
        class="wuiListGroupItem__icon"
        data-wuiicon-type="stop"
      />
      <span
        class="wuiListGroupItem__label"
        title="Label with iconType"
      >
        Label with iconType
      </span>
    </span>
  </li>
  <li
    class="wuiListGroupItem wuiListGroupItem--medium wuiListGroupItem-hasExtraAction"
  >
    <span
      class="wuiListGroupItem__text"
    >
      <span
        class="wuiListGroupItem__label"
        title="Custom extra action"
      >
        Custom extra action
      </span>
    </span>
    <button
      aria-label="bell"
      class="wuiButtonIcon wuiButtonIcon--primary wuiListGroupItem__extraAction wuiListGroupItem__extraAction-alwaysShow"
      type="button"
    >
      <div
        aria-hidden="true"
        class="wuiButtonIcon__icon"
        data-wuiicon-type="bell"
      />
    </button>
  </li>
  <li
    class="wuiListGroupItem wuiListGroupItem--medium wuiListGroupItem-isClickable"
  >
    <button
      class="wuiListGroupItem__button"
      type="button"
    >
      <span
        class="wuiListGroupItem__label"
        title="Button with onClick"
      >
        Button with onClick
      </span>
    </button>
  </li>
  <li
    class="wuiListGroupItem wuiListGroupItem--medium wuiListGroupItem-isActive wuiListGroupItem-isClickable"
  >
    <a
      class="wuiListGroupItem__button"
      href="#"
      rel="noreferrer"
    >
      <span
        class="wuiListGroupItem__label"
        title="Active link"
      >
        Active link
      </span>
    </a>
  </li>
  <li
    class="wuiListGroupItem wuiListGroupItem--medium wuiListGroupItem-isClickable"
  >
    <a
      class="wuiListGroupItem__button"
      href="#"
      rel="noreferrer"
    >
      <span
        class="wuiListGroupItem__label"
        title="Link with href"
      >
        Link with href
      </span>
    </a>
  </li>
</ul>
`;

exports[`WuiListGroup listItems is rendered with color 1`] = `
<ul
  class="wuiListGroup wuiListGroup--gutterSmall wuiListGroup-maxWidthDefault"
>
  <li
    class="wuiListGroupItem wuiListGroupItem--medium wuiListGroupItem--primary"
  >
    <span
      class="wuiListGroupItem__text"
    >
      <div
        class="wuiListGroupItem__icon"
        data-wuiicon-type="stop"
      />
      <span
        class="wuiListGroupItem__label"
        title="Label with iconType"
      >
        Label with iconType
      </span>
    </span>
  </li>
  <li
    class="wuiListGroupItem wuiListGroupItem--medium wuiListGroupItem--primary wuiListGroupItem-hasExtraAction"
  >
    <span
      class="wuiListGroupItem__text"
    >
      <span
        class="wuiListGroupItem__label"
        title="Custom extra action"
      >
        Custom extra action
      </span>
    </span>
    <button
      aria-label="bell"
      class="wuiButtonIcon wuiButtonIcon--primary wuiListGroupItem__extraAction wuiListGroupItem__extraAction-alwaysShow"
      type="button"
    >
      <div
        aria-hidden="true"
        class="wuiButtonIcon__icon"
        data-wuiicon-type="bell"
      />
    </button>
  </li>
  <li
    class="wuiListGroupItem wuiListGroupItem--medium wuiListGroupItem--primary wuiListGroupItem-isClickable"
  >
    <button
      class="wuiListGroupItem__button"
      type="button"
    >
      <span
        class="wuiListGroupItem__label"
        title="Button with onClick"
      >
        Button with onClick
      </span>
    </button>
  </li>
  <li
    class="wuiListGroupItem wuiListGroupItem--medium wuiListGroupItem--primary wuiListGroupItem-isActive wuiListGroupItem-isClickable"
  >
    <a
      class="wuiListGroupItem__button"
      href="#"
      rel="noreferrer"
    >
      <span
        class="wuiListGroupItem__label"
        title="Active link"
      >
        Active link
      </span>
    </a>
  </li>
  <li
    class="wuiListGroupItem wuiListGroupItem--medium wuiListGroupItem--primary wuiListGroupItem-isClickable"
  >
    <a
      class="wuiListGroupItem__button"
      href="#"
      rel="noreferrer"
    >
      <span
        class="wuiListGroupItem__label"
        title="Link with href"
      >
        Link with href
      </span>
    </a>
  </li>
</ul>
`;

exports[`WuiListGroup listItems is rendered with size 1`] = `
<ul
  class="wuiListGroup wuiListGroup--gutterSmall wuiListGroup-maxWidthDefault"
/>
`;

exports[`WuiListGroup props bordered is rendered 1`] = `
<ul
  class="wuiListGroup wuiListGroup-bordered wuiListGroup--gutterSmall wuiListGroup-maxWidthDefault"
/>
`;

exports[`WuiListGroup props flush is rendered 1`] = `
<ul
  class="wuiListGroup wuiListGroup-flush wuiListGroup--gutterSmall wuiListGroup-maxWidthDefault"
/>
`;

exports[`WuiListGroup props gutter size m is rendered 1`] = `
<ul
  class="wuiListGroup wuiListGroup--gutterMedium wuiListGroup-maxWidthDefault"
/>
`;

exports[`WuiListGroup props gutter size none is rendered 1`] = `
<ul
  class="wuiListGroup wuiListGroup-maxWidthDefault"
/>
`;

exports[`WuiListGroup props gutter size s is rendered 1`] = `
<ul
  class="wuiListGroup wuiListGroup--gutterSmall wuiListGroup-maxWidthDefault"
/>
`;

exports[`WuiListGroup props maxWidth as a number is rendered 1`] = `
<ul
  class="wuiListGroup wuiListGroup--gutterSmall"
  style="max-width:300px"
/>
`;

exports[`WuiListGroup props maxWidth as a string is rendered 1`] = `
<ul
  class="wuiListGroup wuiListGroup--gutterSmall"
  style="max-width:20em"
/>
`;

exports[`WuiListGroup props maxWidth as true is rendered 1`] = `
<ul
  class="wuiListGroup wuiListGroup--gutterSmall wuiListGroup-maxWidthDefault"
/>
`;

exports[`WuiListGroup props showToolTips is rendered 1`] = `
<ul
  class="wuiListGroup wuiListGroup--gutterSmall wuiListGroup-maxWidthDefault"
/>
`;

exports[`WuiListGroup props wrapText is rendered 1`] = `
<ul
  class="wuiListGroup wuiListGroup--gutterSmall wuiListGroup-maxWidthDefault"
/>
`;
